[package]
name = "pass2csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgp = "0.8.0"
serde = { version = "1.0.143", features = ["derive"] }
structopt = "0.3.26"
anyhow = "1.0.62"
thiserror = "1.0.32"
csv = "1.1.6"